www: Home: Fix margin overflow

--- a/www/style/main.css
+++ b/www/style/main.css
@@ -82,7 +82,8 @@ h4 {
 }
 
 .fun-times img {
-   margin: 3ex;
+   display: block;
+   margin: auto;
    margin-bottom: 0;
    width: 90%;
    border: solid 4px rgba(255,255,255,0.6);
